--- a/users/u_modules.html
+++ b/users/u_modules.html
@@ -7,27 +7,15 @@
 
 	<title>Модули курса</title>
 
-	<!-- <link th:href="@{/css/u_main.css}" rel="stylesheet">
-    <link th:href="@{/css/gap.css}" rel="stylesheet">
-    <link th:href="@{/css/custom-tabs.css}" rel="stylesheet">
-    <link th:href="@{/css/available-course.css}" rel="stylesheet">
-    <link th:href="@{/css/info-blocks.css}" rel="stylesheet">
-    <link th:href="@{/css/progress-bar.css}" rel="stylesheet">
-    <link th:href="@{/css/btn.css}" rel="stylesheet">
-    <link th:href="@{/css/main-nav.css}" rel="stylesheet"> -->
-
-	<link href="../css/u_main.css" rel="stylesheet">
-	<link href="../css/gap.css" rel="stylesheet">
-	<link href="../css/custom-tabs.css" rel="stylesheet">
-	<link href="../css/available-course.css" rel="stylesheet">
-	<link href="../css/info-blocks.css" rel="stylesheet">
-	<link href="../css/progress-bar.css" rel="stylesheet">
-	<link href="../css/btn.css" rel="stylesheet">
-	<link href="../css/main-nav.css" rel="stylesheet">
-
-	<link rel="stylesheet" href="../css/pages/u_modules.css">
-
-
+	<link th:href="@{../../css/u_main.css}" rel="stylesheet">
+    <link th:href="@{../../css/gap.css}" rel="stylesheet">
+    <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
+    <link th:href="@{../../css/available-course.css}" rel="stylesheet">
+    <link th:href="@{../../css/info-blocks.css}" rel="stylesheet">
+    <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
+    <link th:href="@{../../css/btn.css}" rel="stylesheet">
+    <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
+		<link th:href="@{../../css/pages/u_modules.css}" rel="stylesheet">
 </head>
 <body class="body"  onload="getCountdownOnUserModulesPage()">
 	<div th:replace="base :: user-nav"></div>
@@ -66,7 +54,7 @@
 									<div class="avatar">
 										<div class="avatar__wrapper avatar__wrapper_xsmall">
 											<span class="avatar-image avatar-image_default mobile-menu__avatar">
-												<img src="../img/menu/image13.png" alt="avatar">
+												<img src="../../img/menu/image13.png" alt="avatar">
 											</span>
 										</div>
 									</div>
@@ -87,7 +75,7 @@
 									<div class="avatar">
 										<div class="avatar__wrapper avatar__wrapper_large">
 											<span class="avatar-image avatar-image_large avatar-image_default">
-												<img src="../img/menu/image13.png" alt="avatar">
+												<img src="../../img/menu/image13.png" alt="avatar">
 											</span>
 										</div>
 									</div>
@@ -160,7 +148,7 @@
 								<div class="avatar">
 									<div class="avatar__wrapper avatar__wrapper_large">
 										<span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-											<img src="../img/menu/image13.png" alt="avatar">
+											<img src="../../img/menu/image13.png" alt="avatar">
 										</span>
 									</div>
 								</div>
@@ -268,7 +256,7 @@
 															th:data-startDate="${course.fullStartTime}">Когда начинается</span>
 													</div>
 
-													<img src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
+													<img src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
 												</div>
 												<div class="content-element__header-side">
 													<div class="info-blocks">
@@ -333,10 +321,10 @@
 
 								<div class="module-vk__dialog">
 
-									<img src="../img/dialog.svg" alt="dialog">
+									<img src="../../img/dialog.svg" alt="dialog">
 
 									<div class="module-vk__dialog-typing">
-										<img src="../img/dialog-typing.png" alt="dialog-typing">
+										<img src="../../img/dialog-typing.png" alt="dialog-typing">
 										<div class="module-vk__type">
 											<div class="module-vk__typing"></div>
 											<div class="module-vk__typing"></div>
@@ -585,7 +573,7 @@
 												<div class="content-element__content-side module-main__side">
 													<div class="content-element__image module-main__image">
 														<!-- <img th:src="'/' + ${module.logoPath}" alt=""> -->
-														<img src="../img/preview.png" alt="">
+														<img src="../../img/preview.png" alt="">
 													</div>
 												</div>
 											</div>
@@ -712,7 +700,7 @@
 									</div>
 									<div class="available-course__side">
 										<div class="available-course__image courses__image">
-											<img src="../img/bg.png" alt="bg" />
+											<img src="../../img/bg.png" alt="bg" />
 											<span class="courses__open">
 												Открыть <span></span>
 
@@ -721,7 +709,7 @@
 										</div>
 									</div>
 
-									<img class="courses__sweet" src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
+									<img class="courses__sweet" src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
 								</div>
 							</a>
 
@@ -892,7 +880,7 @@
 								<div class="sertifikat__content">
 
 									<div class="sertifikat__image sertifikat-image">
-										<img src="../img/bg.png" alt="sertifikat">
+										<img src="../../img/bg.png" alt="sertifikat">
 									</div>
 								</div>
 
@@ -914,7 +902,7 @@
           </div>
 
           <div class="popup__avatar">
-            <img src="../img/" alt="avatar">
+            <img src="../../img/image13.png" alt="avatar">
             <a href=".">Изменить аватар</a>
           </div>
 
@@ -959,10 +947,11 @@
     </div>
   </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="../js/progress-bar.js"> </script>
-	<script src="../js/menu-nav.js"></script>
-	<script src="../js/countdown.js"> </script>
+  <th:block th:insert="base :: jquery" />
+	<script th:src="@{../../js/progress-bar.js}"></script>
+	<script th:src="@{../../js/menu-nav.js}"></script>
+	<script th:src="@{../../js/countdown.js}"></script>
+	<script th:src="@{../../js/main-nav.js}"></script>
 </body>
 
 
