--- a/users/u_lesson.html
+++ b/users/u_lesson.html
@@ -7,32 +7,18 @@
 
   <title th:utext="${lesson.title}"></title>
 
-  <!-- <link th:href="@{/css/u_main.css}" rel="stylesheet">
-    <link th:href="@{/css/gap.css}" rel="stylesheet">
-    <link th:href="@{/css/custom-tabs.css}" rel="stylesheet">
-    <link th:href="@{/css/available-course.css}" rel="stylesheet">
-    <link th:href="@{/css/info-blocks.css}" rel="stylesheet">
-    <link th:href="@{/css/progress-bar.css}" rel="stylesheet">
-    <link th:href="@{/css/jquery.fancybox.min.css}" rel="stylesheet">
-    <link th:href="@{/css/btn.css}" rel="stylesheet">
-    <link th:href="@{/css/gallery-block.css}" rel="stylesheet">
-    <link th:href="@{/css/comment-block.css}" rel="stylesheet">
-    <link th:href="@{/css/main-nav.css}" rel="stylesheet"> -->
-
-  <link href="../css/u_main.css" rel="stylesheet">
-  <link href="../css/gap.css" rel="stylesheet">
-  <link href="../css/custom-tabs.css" rel="stylesheet">
-  <link href="../css/available-course.css" rel="stylesheet">
-  <link href="../css/info-blocks.css" rel="stylesheet">
-  <link href="../css/progress-bar.css" rel="stylesheet">
-  <link href="../css/jquery.fancybox.min.css" rel="stylesheet">
-  <link href="../css/btn.css" rel="stylesheet">
-  <link href="../css/gallery-block.css" rel="stylesheet">
-  <link href="../css/comment-block.css" rel="stylesheet">
-  <link href="../css/main-nav.css" rel="stylesheet">
-
-  <link rel="stylesheet" href="../css/pages/u_lesson.css">
-
+  <link th:href="@{../../css/u_main.css}" rel="stylesheet">
+    <link th:href="@{../../css/gap.css}" rel="stylesheet">
+    <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
+    <link th:href="@{../../css/available-course.css}" rel="stylesheet">
+    <link th:href="@{../../css/info-blocks.css}" rel="stylesheet">
+    <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
+    <link th:href="@{../../css/jquery.fancybox.min.css}" rel="stylesheet">
+    <link th:href="@{../../css/btn.css}" rel="stylesheet">
+    <link th:href="@{../../css/gallery-block.css}" rel="stylesheet">
+    <link th:href="@{../../css/comment-block.css}" rel="stylesheet">
+    <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
+    <link th:href="@{../../css/pages/u_lesson.css}" rel="stylesheet">
 </head>
 
 <body class="body">
@@ -71,7 +57,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_xsmall">
                     <span class="avatar-image avatar-image_default mobile-menu__avatar">
-                      <img src="../img/menu/image13.png" alt="avatar">
+                      <img src="../../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -92,7 +78,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_large">
                     <span class="avatar-image avatar-image_large avatar-image_default">
-                      <img src="../img/menu/image13.png" alt="avatar">
+                      <img src="../../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -165,7 +151,7 @@
               <div class="avatar">
                 <div class="avatar__wrapper avatar__wrapper_large">
                   <span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-                    <img src="../img/menu/image13.png" alt="avatar">
+                    <img src="../../img/menu/image13.png" alt="avatar">
                   </span>
                 </div>
               </div>
@@ -279,7 +265,7 @@
 
                       <div class="content-element__video-wrapper">
                         <a data-fancybox th:href="${lessonBlock.value}" class="content-video">
-                          <img src="../img/lesson.png" alt="">
+                          <img src="../../img/lesson.png" alt="">
                         </a>
                       </div>
                     </div>
@@ -462,7 +448,7 @@
                     <div class="content-element__image lesson-image__img">
                       <div class="content-element__image-wrapper">
                         <a data-fancybox th:href="'/' + ${lessonBlock.value}" class="content-image">
-                          <img src="../img/lesson.png" alt="">
+                          <img src="../../img/lesson.png" alt="">
                         </a>
                       </div>
                     </div>
@@ -496,7 +482,7 @@
                                   <a data-fancybox th:href="'/' + ${img.value}" class="galleryitem">
                                     <div class="gallery-item__preview works__img"
                                       th:style="'background-image: url(/' + ${img.value} + ');'">
-                                      <img src="../img/lesson.png" alt="">
+                                      <img src="../../img/lesson.png" alt="">
                                     </div>
                                   </a>
                                 </div>
@@ -655,7 +641,7 @@
                                     <!--                                                            </div>-->
                                     <div class="comment__header-item">
                                       <div class="comment__title">
-                                        <img class="comment__avatar" src="../img/image13.png" alt="">
+                                        <img class="comment__avatar" src="../../img/image13.png" alt="">
                                         <span class="comment__author">Автор</span>
                                       </div>
                                     </div>
@@ -679,7 +665,7 @@
                                                   <!-- <img class="gallery-item__preview"
                                                     th:src="${'/' + homeworkFile.path}"> -->
 
-                                                    <img src="../img/bg.png" alt="">
+                                                    <img src="../../img/bg.png" alt="">
                                                 </a>
                                               </div>
                                             </th:block>
@@ -711,7 +697,7 @@
                                     <!--                                                            </div>-->
                                     <div class="comment__header-item">
                                       <div class="comment__title">
-                                        <img class="comment__avatar" src="../img/image13.png" alt="">
+                                        <img class="comment__avatar" src="../../img/image13.png" alt="">
                                         <span class="comment__author">Автор <span
                                             class="comment__author--lightgray">Куратор</span></span>
                                       </div>
@@ -734,7 +720,7 @@
                                                   <!-- <img class="gallery-item__preview comment__files"
                                                     th:src="${'/' + homeworkFile.path}" alt="files"> -->
 
-                                                    <img src="../img/bg.png" alt="">
+                                                    <img src="../../img/bg.png" alt="">
                                                 </a>
                                               </div>
                                             </th:block>
@@ -800,7 +786,7 @@
           </div>
 
           <div class="popup__avatar">
-            <img src="../img/" alt="avatar">
+            <img src="../../img/image13.png" alt="avatar">
             <a href=".">Изменить аватар</a>
           </div>
 
@@ -845,26 +831,15 @@
     </div>
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <th:block th:insert="base :: jquery" />
+<script th:src="@{../../js/main.js}"></script>
+<script th:src="@{../../js/jquery.fancybox.min.js}"></script>
+<script th:src="@{../../js/progress-bar.js}"></script>
+<script th:src="@{../../js/lesson-vote.js}"></script>
+<script th:src="@{../../js/upload-item-files.js}"></script>
+<script th:src="@{../../js/homework.js}"></script> 
+<script th:src="@{../../js/main-nav.js}"></script>
 
-<script src="../js/main.js"></script>
-<script src="../js/jquery.fancybox.min.js"></script>
-<script src="../js/progress-bar.js"></script>
-<script src="../js/lesson-vote.js"></script>
-<script src="../js/upload-item-files.js"></script>
-<script src="../js/homework.js"></script>
-<script src="../js/menu-nav.js"></script>
+
 </body>
-
-
-
-
-<!-- <th:block th:insert="base :: jquery" />
-<script th:src="@{/js/main.js}"></script>
-<script th:src="@{/js/jquery.fancybox.min.js}"></script>
-<script th:src="@{/js/progress-bar.js}"></script>
-<script th:src="@{/js/lesson-vote.js}"></script>
-<script th:src="@{/js/upload-item-files.js}"></script>
-<script th:src="@{/js/homework.js}"></script> -->
-
 </html>
