--- a/users/u_module.html
+++ b/users/u_module.html
@@ -7,25 +7,15 @@
 
     <title th:utext="${module.name}"></title>
 
-    <!-- <link th:href="@{/css/u_main.css}" rel="stylesheet">
-    <link th:href="@{/css/gap.css}" rel="stylesheet">
-    <link th:href="@{/css/custom-tabs.css}" rel="stylesheet">
-    <link th:href="@{/css/available-course.css}" rel="stylesheet">
-    <link th:href="@{/css/info-blocks.css}" rel="stylesheet">
-    <link th:href="@{/css/progress-bar.css}" rel="stylesheet">
-    <link th:href="@{/css/btn.css}" rel="stylesheet">
-    <link th:href="@{/css/main-nav.css}" rel="stylesheet"> -->
-
-    <link href="../css/u_main.css" rel="stylesheet">
-    <link href="../css/gap.css" rel="stylesheet">
-    <link href="../css/custom-tabs.css" rel="stylesheet">
-    <link href="../css/available-course.css" rel="stylesheet">
-    <link href="../css/info-blocks.css" rel="stylesheet">
-    <link href="../css/progress-bar.css" rel="stylesheet">
-    <link href="../css/btn.css" rel="stylesheet">
-    <link href="../css/main-nav.css" rel="stylesheet">
-    
-    <link rel="stylesheet" href="../css/pages/u_module.css">
+    <link th:href="@{../../css/u_main.css}" rel="stylesheet">
+    <link th:href="@{../../css/gap.css}" rel="stylesheet">
+    <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
+    <link th:href="@{../../css/available-course.css}" rel="stylesheet">
+    <link th:href="@{../../css/info-blocks.css}" rel="stylesheet">
+    <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
+    <link th:href="@{../../css/btn.css}" rel="stylesheet">
+    <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
+    <link th:href="@{../../css/pages/main-nav.css}" rel="stylesheet">
 </head>
 
 <body class="body">
@@ -65,7 +55,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_xsmall">
                     <span class="avatar-image avatar-image_default mobile-menu__avatar">
-                      <img src="../img/menu/image13.png" alt="avatar">
+                      <img src="../../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -86,7 +76,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_large">
                     <span class="avatar-image avatar-image_large avatar-image_default">
-                      <img src="../img/menu/image13.png" alt="avatar">
+                      <img src="../../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -159,7 +149,7 @@
               <div class="avatar">
                 <div class="avatar__wrapper avatar__wrapper_large">
                   <span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-                    <img src="../img/menu/image13.png" alt="avatar">
+                    <img src="../../img/menu/image13.png" alt="avatar">
                   </span>
                 </div>
               </div>
@@ -401,7 +391,7 @@
             </div>
   
             <div class="popup__avatar">
-              <img src="../img/" alt="avatar">
+              <img src="../../img/image13.png" alt="avatar">
               <a href=".">Изменить аватар</a>
             </div>
   
@@ -446,7 +436,7 @@
       </div>
     </div>
 
-    <script src="../js/menu-nav.js"></script>
+    <script th:src="@{../../js/main-nav.js}"></script>
 </body>
 
 </html>
