--- a/users/u_modules.html
+++ b/users/u_modules.html
@@ -7,7 +7,7 @@
 
 	<title>Модули курса</title>
 
-	<link th:href="@{../../css/u_main.css}" rel="stylesheet">
+	<!-- <link th:href="@{../../css/u_main.css}" rel="stylesheet">
     <link th:href="@{../../css/gap.css}" rel="stylesheet">
     <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
     <link th:href="@{../../css/available-course.css}" rel="stylesheet">
@@ -15,7 +15,18 @@
     <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
     <link th:href="@{../../css/btn.css}" rel="stylesheet">
     <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
-		<link th:href="@{../../css/pages/u_modules.css}" rel="stylesheet">
+		<link th:href="@{../../css/pages/u_modules.css}" rel="stylesheet"> -->
+
+		<link th:href="@{../../css/u_main.css}" rel="stylesheet">
+    <link th:href="@{../../css/gap.css}" rel="stylesheet">
+    <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
+    <link th:href="@{../../css/available-course.css}" rel="stylesheet">
+    <link th:href="@{../../css/info-blocks.css}" rel="stylesheet">
+    <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
+    <link th:href="@{../../css/btn.css}" rel="stylesheet">
+    <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
+		<link th:href="@{../../css/pages/u_modules.css}" rel="stylesheet"> 
+
 </head>
 <body class="body"  onload="getCountdownOnUserModulesPage()">
 	<div th:replace="base :: user-nav"></div>
