--- a/users/u_courses.html
+++ b/users/u_courses.html
@@ -7,7 +7,7 @@
 
   <title>Мои курсы</title>
 
-  <link th:href="@{../../css/u_main.css}" rel="stylesheet">
+  <!-- <link th:href="@{../../css/u_main.css}" rel="stylesheet">
   <link th:href="@{../../css/gap.css}" rel="stylesheet">
   <link th:href="@{../../css/custom-tabs.css}" rel="stylesheet">
   <link th:href="@{../../css/available-course.css}" rel="stylesheet">
@@ -15,7 +15,18 @@
   <link th:href="@{../../css/progress-bar.css}" rel="stylesheet">
   <link th:href="@{../../css/btn.css}" rel="stylesheet">
   <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
-  <link th:href="@{../../css/pages/u_courses.css}" rel="stylesheet">
+  <link th:href="@{../../css/pages/u_courses.css}" rel="stylesheet"> -->
+
+  <link href="../css/u_main.css" rel="stylesheet">
+  <link href="../css/gap.css" rel="stylesheet">
+  <link href="../css/custom-tabs.css" rel="stylesheet">
+  <link href="../css/available-course.css" rel="stylesheet">
+  <link href="../css/info-blocks.css" rel="stylesheet">
+  <link href="../css/progress-bar.css" rel="stylesheet">
+  <link href="../css/btn.css" rel="stylesheet">
+  <link href="../css/main-nav.css" rel="stylesheet">
+  <link href="../css/pages/u_courses.css" rel="stylesheet">
+
 </head>
 
 <!-- onload="getCountdownOnUserCoursesPage()" -->
@@ -57,7 +68,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_xsmall">
                     <span class="avatar-image avatar-image_default mobile-menu__avatar">
-                      <img src="../../img/menu/image13.png" alt="avatar">
+                      <img src="../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -78,7 +89,7 @@
                 <div class="avatar">
                   <div class="avatar__wrapper avatar__wrapper_large">
                     <span class="avatar-image avatar-image_large avatar-image_default">
-                      <img src="../../img/menu/image13.png" alt="avatar">
+                      <img src="../img/menu/image13.png" alt="avatar">
                     </span>
                   </div>
                 </div>
@@ -151,7 +162,7 @@
               <div class="avatar">
                 <div class="avatar__wrapper avatar__wrapper_large">
                   <span class="avatar-image avatar-image_large avatar-image_default menu__avatar">
-                    <img src="../../img/menu/image13.png" alt="avatar">
+                    <img src="../img/menu/image13.png" alt="avatar">
                   </span>
                 </div>
               </div>
@@ -269,7 +280,7 @@
                               </div>
                             </div>
 
-                            <img src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
+                            <img src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
                           </div>
 
                           <div class="available-course__title -gap_2 courses__title">Пряники Домашние</div>
@@ -314,7 +325,7 @@
                         </div>
                         <div class="available-course__side">
                           <div class="available-course__image courses__image">
-                            <img src="../../img/bg.png" alt="bg">
+                            <img src="../img/bg.png" alt="bg">
                           </div>
                         </div>
                       </div>
@@ -338,7 +349,7 @@
                               </div>
                             </div>
 
-                            <img src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
+                            <img src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
                           </div>
 
                           <div class="available-course__title -gap_2 courses__title">Пряники Домашние</div>
@@ -382,7 +393,7 @@
 
                         <div class="available-course__side">
                           <div class="available-course__image courses__image">
-                            <img src="../../img/bg.png" alt="bg">
+                            <img src="../img/bg.png" alt="bg">
                           </div>
                         </div>
                       </div>
@@ -408,7 +419,7 @@
           </div>
 
           <div class="popup__avatar">
-            <img src="../../img/image13.png" alt="avatar">
+            <img src="../img/image13.png" alt="avatar">
             <a href=".">Изменить аватар</a>
           </div>
 
@@ -454,11 +465,18 @@
   </div>
 
   <th:block th:insert="base :: jquery" />
+  <script src="../js/_tabby.js"></script>
+  <script src="../js/tabs.js"></script>
+  <script src="../js/progress-bar.js"></script>
+  <script src="../js/countdown.js"></script>
+  <script src="../js/menu-nav.js"></script>
+
+  <!-- <th:block th:insert="base :: jquery" />
   <script th:src="@{../../js/_tabby.js}"></script>
   <script th:src="@{../../js/tabs.js}"></script>
   <script th:src="@{../../js/progress-bar.js}"></script>
   <script th:src="@{../../js/countdown.js}"></script>
-  <script th:src="@{../../js/menu-nav.js}"></script>
+  <script th:src="@{../../js/menu-nav.js}"></script> -->
 </body>
 
 </html>
