--- a/users/u_module.html
+++ b/users/u_module.html
@@ -17,18 +17,16 @@
     <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
     <link th:href="@{../../css/pages/main-nav.css}" rel="stylesheet"> -->
 
-    <link href="../../css/u_main.css" rel="stylesheet">
-    <link href="../../css/gap.css" rel="stylesheet">
-    <link href="../../css/custom-tabs.css" rel="stylesheet">
-    <link href="../../css/available-course.css" rel="stylesheet">
-    <link href="../../css/info-blocks.css" rel="stylesheet">
-    <link href="../../css/progress-bar.css" rel="stylesheet">
-    <link href="../../css/btn.css" rel="stylesheet">
-    <link href="../../css/main-nav.css" rel="stylesheet">
-    <link href="../../css/pages/main-nav.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="../../css/pages/u_module.css">
-
+    <link href="../css/u_main.css" rel="stylesheet">
+    <link href="../css/gap.css" rel="stylesheet">
+    <link href="../css/custom-tabs.css" rel="stylesheet">
+    <link href="../css/available-course.css" rel="stylesheet">
+    <link href="../css/info-blocks.css" rel="stylesheet">
+    <link href="../css/progress-bar.css" rel="stylesheet">
+    <link href="../css/btn.css" rel="stylesheet">
+    <link href="../css/main-nav.css" rel="stylesheet">
+    <link href="../css/pages/main-nav.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/pages/u_module.css">
 </head>
 
 <body class="body">
@@ -236,7 +234,7 @@
                     </div>
 
                     <div class="popup__avatar">
-                        <img src="../../img/image13.png" alt="avatar">
+                        <img src="../img/image13.png" alt="avatar">
                         <a href=".">Изменить аватар</a>
                     </div>
 
@@ -281,7 +279,7 @@
         </div>
     </div>
 
-    <script src="../../js/main-nav.js"></script>
+    <script src="../js/main-nav.js"></script>
     <!-- <script th:src="@{../../js/main-nav.js}"></script> -->
 </body>
 
