--- a/users/u_modules.html
+++ b/users/u_modules.html
@@ -17,15 +17,15 @@
     <link th:href="@{../../css/main-nav.css}" rel="stylesheet">
 		<link th:href="@{../../css/pages/u_modules.css}" rel="stylesheet"> -->
 
-		<link href="../../css/u_main.css" rel="stylesheet">
-    <link href="../../css/gap.css" rel="stylesheet">
-    <link href="../../css/custom-tabs.css" rel="stylesheet">
-    <link href="../../css/available-course.css" rel="stylesheet">
-    <link href="../../css/info-blocks.css" rel="stylesheet">
-    <link href="../../css/progress-bar.css" rel="stylesheet">
-    <link href="../../css/btn.css" rel="stylesheet">
-    <link href="../../css/main-nav.css" rel="stylesheet">
-		<link href="../../css/pages/u_modules.css" rel="stylesheet"> 
+		<link href="../css/u_main.css" rel="stylesheet">
+    <link href="../css/gap.css" rel="stylesheet">
+    <link href="../css/custom-tabs.css" rel="stylesheet">
+    <link href="../css/available-course.css" rel="stylesheet">
+    <link href="../css/info-blocks.css" rel="stylesheet">
+    <link href="../css/progress-bar.css" rel="stylesheet">
+    <link href="../css/btn.css" rel="stylesheet">
+    <link href="../css/main-nav.css" rel="stylesheet">
+		<link href="../css/pages/u_modules.css" rel="stylesheet"> 
 
 </head>
 <body class="body"  onload="getCountdownOnUserModulesPage()">
@@ -96,7 +96,7 @@
 															th:data-startDate="${course.fullStartTime}">Когда начинается</span>
 													</div>
 
-													<img src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
+													<img src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
 												</div>
 												<div class="content-element__header-side">
 													<div class="info-blocks">
@@ -161,10 +161,10 @@
 
 								<div class="module-vk__dialog">
 
-									<img src="../../img/dialog.svg" alt="dialog">
+									<img src="../img/dialog.svg" alt="dialog">
 
 									<div class="module-vk__dialog-typing">
-										<img src="../../img/dialog-typing.png" alt="dialog-typing">
+										<img src="../img/dialog-typing.png" alt="dialog-typing">
 										<div class="module-vk__type">
 											<div class="module-vk__typing"></div>
 											<div class="module-vk__typing"></div>
@@ -413,7 +413,7 @@
 												<div class="content-element__content-side module-main__side">
 													<div class="content-element__image module-main__image">
 														<!-- <img th:src="'/' + ${module.logoPath}" alt=""> -->
-														<img src="../../img/preview.png" alt="">
+														<img src="../img/preview.png" alt="">
 													</div>
 												</div>
 											</div>
@@ -540,7 +540,7 @@
 									</div>
 									<div class="available-course__side">
 										<div class="available-course__image courses__image">
-											<img src="../../img/bg.png" alt="bg" />
+											<img src="../img/bg.png" alt="bg" />
 											<span class="courses__open">
 												Открыть <span></span>
 
@@ -549,7 +549,7 @@
 										</div>
 									</div>
 
-									<img class="courses__sweet" src="../../img/SweetsAcademy.svg" alt="sweetsAcademy">
+									<img class="courses__sweet" src="../img/SweetsAcademy.svg" alt="sweetsAcademy">
 								</div>
 							</a>
 
@@ -720,7 +720,7 @@
 								<div class="sertifikat__content">
 
 									<div class="sertifikat__image sertifikat-image">
-										<img src="../../img/bg.png" alt="sertifikat">
+										<img src="../img/bg.png" alt="sertifikat">
 									</div>
 								</div>
 
@@ -742,7 +742,7 @@
           </div>
 
           <div class="popup__avatar">
-            <img src="../../img/image13.png" alt="avatar">
+            <img src="../img/image13.png" alt="avatar">
             <a href=".">Изменить аватар</a>
           </div>
 
@@ -788,10 +788,10 @@
   </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="../../js/progress-bar.js"></script>
-	<script src="../../js/menu-nav.js"></script>
-	<script src="../../js/countdown.js"></script>
-	<script src="../../js/main-nav.js"></script>
+	<script src="../js/progress-bar.js"></script>
+	<script src="../js/menu-nav.js"></script>
+	<script src="../js/countdown.js"></script>
+	<script src="../js/main-nav.js"></script>
 
   <!-- <th:block th:insert="base :: jquery" />
 	<script th:src="@{../../js/progress-bar.js}"></script>
